--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
 
+
     <dependencies>
+
+        <!--<dependency>-->
+        <!--<groupId>org.apache</groupId>-->
+        <!--<artifactId>spark-assembly-1.6.0-hadoop-2.6.0</artifactId>-->
+        <!--<version>1.6.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>log4j</groupId>
@@ -23,14 +30,11 @@
         </dependency>
 
 
-
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-graphx_2.10</artifactId>
             <version>1.6.0</version>
         </dependency>
-
-
 
         <dependency>
             <groupId>com.typesafe</groupId>
@@ -92,6 +96,13 @@
             <artifactId>scalikejdbc-config_2.10</artifactId>
             <version>2.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
 
         <!-- fastjson -->
         <dependency>
